--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,24 +7,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <TextView
             android:id="@+id/title_paired_devices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:background="@android:color/holo_green_dark"
             android:text="已配对设备"
             android:textAlignment="center"
             android:textColor="#fff" />
-
         <ListView
             android:id="@+id/paired_devices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-           />
-
+            android:layout_weight="1" />
         <TextView
             android:id="@+id/title_new_devices"
             android:layout_width="match_parent"
@@ -33,21 +27,17 @@
             android:background="@android:color/holo_green_dark"
             android:text="未配对设备"
             android:textAlignment="center"
-
             android:textColor="#fff" />
         <ListView
             android:id="@+id/new_devices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            />
-
+            android:layout_weight="2" />
         <Button
             android:id="@+id/button_scan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="查找设备" />
-
         <Button
             android:id="@+id/button_cancel"
             android:layout_width="match_parent"
